
#==============================================================================
#
#
#                            KEYGEN PASSWORD GENERATOR
#
#
#==============================================================================

CMAKE_MINIMUM_REQUIRED (VERSION 3.8)

PROJECT (keygen)

ADD_SUBDIRECTORY (keygen)
